toml-pretty-deser/compilation_failure_tests/skip.stderr
error[E0609]: no field `value` on type `Option<u8>`
  --> compilation_failure_tests/skip.rs:19:36
   |
19 |         assert_eq!(partial.skipped.value, None);
   |                                    ^^^^^ unknown field
